crates/service/tests/diagnostics/typeck/snapshots/features__diagnostics__typeck__block__new_stack_for_new_block.snap
---
source: crates/service/tests/diagnostics/typeck/block.rs
expression: response
---
{
  "kind": "full",
  "items": [
    {
      "range": {
        "start": {
          "line": 6,
          "character": 6
        },
        "end": {
          "line": 6,
          "character": 13
        }
      },
      "severity": 1,
      "code": "type-check",
      "source": "wat",
      "message": "expected types [i32, i32], found []"
    },
    {
      "range": {
        "start": {
          "line": 7,
          "character": 7
        },
        "end": {
          "line": 7,
          "character": 8
        }
      },
      "severity": 1,
      "code": "type-check",
      "source": "wat",
      "message": "expected types [i32], found [i32, i32, i32] at the end"
    }
  ]
}
