crates/service/tests/diagnostics/typeck/snapshots/features__diagnostics__typeck__block__params_boundary_missing.snap
---
source: crates/service/tests/diagnostics/typeck/block.rs
expression: response
---
{
  "kind": "full",
  "items": [
    {
      "range": {
        "start": {
          "line": 4,
          "character": 10
        },
        "end": {
          "line": 4,
          "character": 25
        }
      },
      "severity": 1,
      "code": "type-check",
      "source": "wat",
      "message": "expected types [i32, i32], found [i32]"
    }
  ]
}
